[project]
name = "pomegranatewine"
version = "0.1.0"
description = ""
authors = [
    {name = "Shumay",email = "alexeev1one@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.13)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
